# pd-general-purpose-agent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  architecture.md  docker-compose.yml  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/python-code-style/: SKILL.md
.github/workflows/: deploy.yml
app/: agent.py  api.py  config.py  slack_app.py
app/agents/: __init__.py
app/agents/root/: __init__.py  prompt.py
app/agents/web_research/: __init__.py  prompt.py  tools.py
changelog/: v1.md  v2.1.md  v2.3.md  v2.4.md  v2.md
docs/: v1-plan.md  v1-progress.md  v2-plan.md  v2-progress.md  v2.1-plan.md  v2.1-progress.md  v2.2-plan.md  v2.2-progress.md  v2.3-plan.md  v2.3-progress.md
