[project]
name = "pd-general-purpose-agent"
version = "2.4.0"
description = "Internal Slack AI agent for PD company"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt[async]>=1.18,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "langchain>=1.0,<2",
    "langchain-core>=1.0,<2",
    "langgraph>=1.0,<2",
    "langchain-anthropic>=0.3,<1",
    "pydantic-settings>=2.5,<3",
    "aiohttp>=3.9,<4",
    "langchain-community>=0.4.1,<0.5",
    "tavily-python>=0.7.23",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
